--- a/lessons/3-NeuralNetworks/03-Perceptron/Perceptron.ipynb
+++ b/lessons/3-NeuralNetworks/03-Perceptron/Perceptron.ipynb
@@ -1057,7 +1057,8 @@
    "hash": "16aeaa504b544176258e5caf576fc030dfd6fff62d0c15825e7863ff13e121ff"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.0 64-bit (conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1070,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.12"
   },
   "livereveal": {
    "start_slideshow_at": "selected"
